--- a/RF_Go/Pages/License.razor
+++ b/RF_Go/Pages/License.razor
@@ -17,10 +17,10 @@
                 Buy a license
             </MudButton>
             <MudButton Variant="Variant.Filled" Color="Color.Secondary" OnClick="ShowActivationForm">
-                Buy a license
+                Activate a license
             </MudButton>
             <MudButton Variant="Variant.Filled" Color="Color.Secondary" OnClick="DeleteUser">
-                Delete user Data
+                Delete user data
             </MudButton>
         </MudStack>
 
