Background color restaured on iOS

--- a/RF_Go/App.xaml
+++ b/RF_Go/App.xaml
@@ -9,6 +9,7 @@
             <Color x:Key="PrimaryTextColor">White</Color>
 
             <Style TargetType="Page">
+                <Setter Property="Background" Value="#1a1a27" />
                 <Setter Property="BackgroundColor" Value="{StaticResource PageBackgroundColor}" />
             </Style>
 
